--- a/src/_includes/main/topbar.html
+++ b/src/_includes/main/topbar.html
@@ -3,8 +3,8 @@
 <header class="position-{% if splash == true %}fixed{% else %}sticky{% endif %} top-0 start-0 end-0 p-3 z-index-outer {% if splash == true %}topbar-splash{% else %}mb-4{% endif %}" id="topbar">
     <div class="d-flex justify-content-between align-items-center">
         <a class="text-primary-gradient my-n2 py-2" href="{{ relBase }}{{ lang.url }}" id="topbar-logo">
-            <span class="sketcho sketcho-sketchometry sketcho-xl lh-100 d-none d-sm-block"></span>
-            <span class="sketcho sketcho-logo sketcho-xl lh-100 d-block d-sm-none"></span>
+            <img class="d-block d-sm-none h-fix-md w-auto" src="{{ relBase }}/media/logo-sm.png" />
+            <img class="d-none d-sm-block h-fix-md w-auto" src="{{ relBase }}/media/logo.png" />
         </a>
         <div></div>
         <div class="d-flex align-items-center m-between-3 m-between-md-4">
@@ -21,21 +21,6 @@
 
             <nav class="navbar navbar-expand m-0 p-0">
                 <ul class="navbar-nav m-0 p-0">
-
-                    <li class="nav-item me-3 me-md-4">
-                        <a href="{{ const.url.start }}" target="_blank"
-                           class="btn btn-primary-gradient rounded-max h-fix-md py-0 px-3 d-flex justify-content-center align-items-center"
-                           id="topbar-start">
-                            <span class="sketcho sketcho-compass-cursor sketcho-lg"></span>
-                            <span class="ms-2">
-                            {%- if const.btn.start[page.lang] != nil -%}
-                            {{ const.btn.start[page.lang] }}
-                            {%- else -%}
-                            {{ const.btn.start[const.default_lang] }}
-                            {%- endif -%}
-                        </span>
-                        </a>
-                    </li>
 
                     {%- assign sorted_pages = site.pages | sort: 'order' -%}
                     {%- assign n_topbar = 0 -%}
