--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -1,4 +1,4 @@
-<div class="offcanvas offcanvas-end" tabindex="-1" id="menu">
+<div class="offcanvas offcanvas-end show" tabindex="-1" id="menu">
     <div class="offcanvas-header">
         <button type="button" class="btn-inline btn-none">
             <i class="fa-solid fa-fw"></i>
@@ -11,10 +11,20 @@
         <div class="list-group list-group-flush mx-n3">
             {%- assign sorted_pages = site.pages | sort: 'order' -%}
             {%- for i_page in sorted_pages -%}
-            {%- if i_page.in_menu_popup == true -%}
+            {%- if i_page.in_menu_popup == true and i_page.parent == nil -%}
             <a href="{{ relBase }}{{ i_page.url }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == i_page.url %}active{% endif %}">
-                {{ i_page.menu_title | default: i_page.header | default: i_page.title }}
+                <div>{{ i_page.menu_title | default: i_page.header | default: i_page.title }}</div>
             </a>
+            {% assign id = i_page.url | split: '/' | last %}
+
+            {%- for j_page in sorted_pages -%}
+            {%- if j_page.in_menu_popup == true and j_page.parent != nil and j_page.parent == id -%}
+            <a href="{{ relBase }}{{ j_page.url }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == j_page.url %}active{% endif %}">
+                <div class="ps-3">{{ j_page.menu_title | default: j_page.header | default: j_page.title }}</div>
+            </a>
+            {%- endif -%}
+            {%- endfor -%}
+
             {%- endif -%}
             {%- endfor -%}
         </div>
