--- a/src/_includes/content.html
+++ b/src/_includes/content.html
@@ -3,7 +3,7 @@
 {%- if content_blank != "" -%}
 {%- if page.render_this == "before" or page.render_this == true or page.sections == nil -%}
 <div class="row justify-content-center px-2">
-    <div class="col-12 col-lg-10 content">
+    <div class="col-12 content">
         {{ content | replace_post }}
     </div>
 </div>
