--- a/src/assets/less/splash.less
+++ b/src/assets/less/splash.less
@@ -1,11 +1,10 @@
 #splash {
+  --splash-gradient: linear-gradient(to top left, @color_primary, @color_secondary);
+
   .splash-page {
     height: 100vh;
     height: 100svh;
     width: 100%;
-
-    color: @color_light;
-    font-size: 275%;
   }
 
   .countdown {
