--- a/src/_includes/main/menu.html
+++ b/src/_includes/main/menu.html
@@ -12,15 +12,39 @@
             {%- assign sorted_pages = site.pages | sort: 'order' -%}
             {%- for i_page in sorted_pages -%}
             {%- if i_page.in_menu_popup == true and i_page.parent == nil -%}
-            <a href="{{ relBase }}{{ i_page.url }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == i_page.url %}active{% endif %}">
-                <div>{{ i_page.menu_title | default: i_page.header | default: i_page.title }}</div>
+            {%- if i_page.external_link -%}
+            {%- assign link = i_page.external_link -%}
+            {%- assign target = i_page.target | default: "_blank" -%}
+            {%- else -%}
+            {%- assign link = relBase | append: i_page.url -%}
+            {%- assign target = i_page.target | default: "_self" -%}
+            {%- endif -%}
+            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == i_page.url %}active{% endif %}">
+                <div class="d-flex align-items-center">
+                    <div>{{ i_page.menu_title | default: i_page.header | default: i_page.title }}</div>
+                    {%- if target == "_blank" -%}
+                    <i class="fa-solid fa-arrow-up-right-from-square ms-2 smaller"></i>
+                    {%- endif -%}
+                </div>
             </a>
             {% assign id = i_page.url | split: '/' | last %}
 
             {%- for j_page in sorted_pages -%}
             {%- if j_page.in_menu_popup == true and j_page.parent != nil and j_page.parent == id -%}
-            <a href="{{ relBase }}{{ j_page.url }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == j_page.url %}active{% endif %}">
-                <div class="ps-3">{{ j_page.menu_title | default: j_page.header | default: j_page.title }}</div>
+            {%- if j_page.external_link -%}
+            {%- assign link = j_page.external_link -%}
+            {%- assign target = j_page.target | default: "_blank" -%}
+            {%- else -%}
+            {%- assign link = relBase | append: j_page.url -%}
+            {%- assign target = j_page.target | default: "_self" -%}
+            {%- endif -%}
+            <a href="{{ link }}" target="{{ target }}" class="list-group-item list-group-item-action px-3 py-1 border-0 {% if page.url == j_page.url %}active{% endif %}">
+                <div class="d-flex align-items-center">
+                    <div class="ps-3">{{ j_page.menu_title | default: j_page.header | default: j_page.title }}</div>
+                    {%- if target == "_blank" -%}
+                    <i class="fa-solid fa-arrow-up-right-from-square ms-2 smaller"></i>
+                    {%- endif -%}
+                </div>
             </a>
             {%- endif -%}
             {%- endfor -%}
