--- a/src/_includes/part/shortcuts.html
+++ b/src/_includes/part/shortcuts.html
@@ -1,4 +1,4 @@
-{%- assign polygon = include.polygon | default: "4" -%}
+{%- assign polygon = include.polygon | default: "8" -%}
 <!-- 5 | 6 | 8 -->
 
 {%- if polygon == "5" -%}
@@ -15,6 +15,7 @@
 {%- assign padding_y = "10%" -%}
 {%- endif -%}
 
+<div class="{{ include.class }}">
 <div class="row g-4 justify-content-center my-4 w-100">
     {%- assign color = 'primary' -%}
     {%- assign first = true -%}
@@ -50,4 +51,5 @@
     {%- assign first = false -%}
     {%- endif -%}
     {%- endfor -%}
+</div>
 </div>
