--- a/src/_includes/sections/cols.html
+++ b/src/_includes/sections/cols.html
@@ -1,12 +1,8 @@
 {%- assign cols = include.data.cols -%}
 
 <div>
-    <div class="row justify-content-center flex-row">
-        <div class="col-12 col-lg-10">
-            <div class="p-2">
-                {{ include.content }}
-            </div>
-        </div>
+    <div class="py-2">
+        {{ include.content }}
     </div>
 
     <div class="row g-4 mt-0">
