--- a/src/_layouts/plain.html
+++ b/src/_layouts/plain.html
@@ -13,13 +13,9 @@
         </div>
     </noscript>
 
-    <main class="container md-container m-between-6 mt-4 mb-5 pb-5">
-        <div class="row justify-content-center mb-3">
-            <div class="col-12 col-lg-10">
-                <div class="px-2">
-                    <h1>{{ page.header | default: page.title }}</h1>
-                </div>
-            </div>
+    <main class="container md-container m-between-5 mt-4 mb-5 pb-5">
+        <div class="mb-3">
+            <h1>{{ page.header | default: page.title }}</h1>
         </div>
 
         {% include content.html %}
