--- a/src/_includes/part/map.html
+++ b/src/_includes/part/map.html
@@ -16,7 +16,7 @@
                 {{ const.maps.text }}
             </p>
             <div>
-                <button type="button" class="btn btn-secondary-gradient rounded-max h-fix-md w-fit py-1 px-3 d-flex" id="map-privacy-check-{{ uuid }}">
+                <button type="button" class="btn btn-secondary-gradient h-fix-md w-fit py-1 px-3 d-flex" id="map-privacy-check-{{ uuid }}">
                     {{ const.maps.button }}
                 </button>
             </div>
