--- a/src/_includes/main/tile-square.html
+++ b/src/_includes/main/tile-square.html
@@ -1,6 +1,6 @@
 <div class="col-6">
     <a href="{{ relBase }}{{ include.target }}"
-       class="d-block p-1 w-100 h-100 square btn-{{ include.colorclass | default: 'primary' }}-gradient border border-outer-dark shadow-outer-dark rounded-4 overflow-hidden text-center tile-button tile-button-square"
+       class="d-block p-1 w-100 h-100 square btn-{{ include.colorclass | default: 'primary' }}-gradient border border-outer-dark shadow-outer-dark overflow-hidden text-center tile-button tile-button-square"
     >
         <div class="d-flex flex-column w-100 h-100">
             {%- if include.image -%}
