--- a/src/_includes/sections/cols.html
+++ b/src/_includes/sections/cols.html
@@ -8,7 +8,7 @@
     <div class="row g-4 mt-0">
         {%- for col in cols -%}
         <div class="col-xxl-3 col-md-6 text-center">
-            <a href="{{ col.link }}" class="btn btn-secondary w-100 h-100 m-between-4 rounded-5 px-4 pt-3 pb-4">
+            <a href="{{ col.link }}" class="btn btn-secondary w-100 h-100 m-between-4 px-4 pt-3 pb-4">
                 <i class="{{ include.data.iconclasses | default: 'fa-solid fa-fw' }}"></i>
                 <div>
                     <h3 class="mb-3">{{ col.title }}</h3>
