--- a/src/assets/less/additions.less
+++ b/src/assets/less/additions.less
@@ -46,7 +46,7 @@ h3:first-child, .h3:first-child,
 h4:first-child, .h4:first-child,
 h5:first-child, .h5:first-child,
 h6:first-child, .h6:first-child {
-  margin-top: 0rem;
+  margin-top: 0;
 }
 
 /// Cookie hint ///
@@ -55,18 +55,6 @@ h6:first-child, .h6:first-child {
   --bs-toast-max-width: 400px;
 }
 
-// Blocks
-
-h1, h2, h3, h4, h5,
-.accordion-item {
-  scroll-margin-top: 100px;
-}
-
-.image-block {
-  h1, h2, h3, h4, h5 {
-    scroll-margin-top: 200px;
-  }
-}
 
 /// Accordion ///
 
