--- a/src/_includes/part/supporters.html
+++ b/src/_includes/part/supporters.html
@@ -1,8 +1,8 @@
 <div class="container md-container">
-    <div class="mb-3">
+    <div class="mb-3 text-center">
         {{ const.supporters.title }}
     </div>
-    <div class="row justify-content-between align-items-center {{ const.supporters.containerclass }}">
+    <div class="row justify-content-center align-items-center {{ const.supporters.containerclass }} g-4">
         {%- for supporter in const.supporters.list -%}
         {%- assign name = supporter.name -%}
         {%- assign logo = supporter.logo -%}
