--- a/src/_includes/main/footer.html
+++ b/src/_includes/main/footer.html
@@ -40,7 +40,7 @@
                 <div class="mx-3 d-none d-md-block">|</div>
                 <div class="w-100 d-block d-md-none"></div>
                 <div>
-                    {{ const.cmldt }}
+                    {{ const.webtitle }}
                 </div>
             </div>
         </div>
