--- a/src/_includes/sections/accordion.html
+++ b/src/_includes/sections/accordion.html
@@ -1,4 +1,4 @@
-<div>
+<div class="section-accordion">
     <!--@formatter:off-->
         {%- assign delimiter_header = include.data.delimiter_header | default: "# " -%}
         {%- assign delimiter_header_size = delimiter_header | size -%}
@@ -80,7 +80,7 @@
         {%- assign contents = contents | push: cont | shift -%}
         <!--@formatter:on-->
 
-    <div class="accordion accordion-flush section-accordion" id="accordion-{{ include.index0 }}">
+    <div class="accordion accordion-flush" id="accordion-{{ include.index0 }}">
 
         {%- for head in heads -%}
         {%- assign badge = badges[forloop.index0] -%}
@@ -91,7 +91,7 @@
         {%- endif -%}
         <div class="accordion-item border-0" id="{{ id | default: head | to_id }}">
             <div class="accordion-header">
-                <button class="accordion-button px-2 py-3 {% if forloop.index0==open %}{% else %}collapsed{% endif %} no-arrow" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-{{ include.index0 }}-{{ forloop.index0 }}"
+                <button class="accordion-button {% if forloop.index0==open %}{% else %}collapsed{% endif %} no-arrow" type="button" data-bs-toggle="collapse" data-bs-target="#accordion-{{ include.index0 }}-{{ forloop.index0 }}"
                         aria-expanded="{% if forloop.index0==open %}true{% else %}false{% endif %}"
                         aria-controls="accordion-{{ include.index0 }}-{{ forloop.index0 }}">
                     <div class="d-flex justify-content-between align-items-center {% if include.data.arrows=='left' %}flex-row-reverse{% endif %} w-100">
@@ -127,20 +127,19 @@
             </div>
         </div>
         {%- endfor -%}
-
     </div>
+
+    {%- if open_hash != false -%}
+    <script type="module">
+        if (JXG.exists($('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0])) {
+            bootstrap.Collapse.getOrCreateInstance(
+                $('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0],
+            ).show();
+        }
+
+        window.setTimeout(function () {
+            $('#accordion-{{ include.index0 }} #' + location.hash.substring(1)).scrollIntoView();
+        }, 500);
+    </script>
+    {%- endif -%}
 </div>
-
-{%- if open_hash != false -%}
-<script type="module">
-    if (JXG.exists($('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0])) {
-        bootstrap.Collapse.getOrCreateInstance(
-            $('#accordion-{{ include.index0 }} #' + location.hash.substring(1) + ' .collapse:not(.show)')[0],
-        ).show();
-    }
-
-    window.setTimeout(function () {
-        $('#accordion-{{ include.index0 }} #' + location.hash.substring(1)).scrollIntoView();
-    }, 500);
-</script>
-{%- endif -%}
