--- a/src/_includes/sections/text.html
+++ b/src/_includes/sections/text.html
@@ -1,3 +1,3 @@
-<div class="{% if include.data.colorclass %}bg-{{ include.data.colorclass }}{% endif %}">
+<div class="section-text">
     {{ include.content }}
 </div>
